# gailibrary

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
benches/: criterion_tests.rs
examples/: game_of_life.rs  ggez.rs  langtons_ant.rs  langtons_ant_rc.rs
src/: fields.rs  fields_tests.rs  ids.rs  ids_tests.rs  lib.rs  main.rs
src/cell/: cell_tests.rs  mod.rs
src/engine/: arena.rs  automaton.rs  automaton_cell.rs  board.rs  grid.rs  mod.rs  neighborhood.rs  rc_automaton.rs
src/enums/: dir_2d.rs  mod.rs  pos_2d.rs  white_black.rs
src/examples/: game_of_life.rs  langtons_ant.rs  mod.rs
src/fields/: mod.rs  tests.rs
src/ids/: ids_tests.rs  mod.rs
src/langtonsant/: arena.rs  automaton_cell.rs  grid.rs  langtons_ant.rs  lant.rs  mod.rs  neighborhood.rs  rc_langtons_ant.rs  visualisation.rs
src/math/: math_tests.rs  mod.rs
src/utils/: mod.rs  prng.rs  prng_tests.rs  umap.rs  umap_tests.rs  uset.rs  uset_tests.rs
src/visualisation/: mod.rs
tests/: integration_tests.rs
