[package]
name = "gailibrary"
version = "0.1.0"
authors = ["Maciej Gorywoda <makingthematrix@gmail.com>"]
edition="2018"

[dependencies]
rand = "0.4.2"
flexi_logger = "0.6"
log = "*"
cgmath = "0.16.0"
float-cmp = "0.3.0"
derive_more = "0.8.0"
time = "0.1"
failure = "0.1.1"
num = "0.1.42"
num-traits = "0.2"
num-derive = "0.2"
lazy_static = "1.2.0"
ggez="0.4"
itertools = "0.8.0"

[dev-dependencies]
quickcheck = "0.6.1"
spectral = "0.6.0"
