[package]
name = "gailibrary"
version = "0.1.0"
authors = ["Maciej Gorywoda <makingthematrix@gmail.com>"]
edition="2018"

[dependencies]
rand = "0.4.2"
flexi_logger = "0.10.5"
log = "0.4.6"
cgmath = "0.17.0"
float-cmp = "0.4.0"
derive_more = "0.14.0"
num = "0.2.0"
num-traits = "0.2.6"
num-derive = "0.2.4"
lazy_static = "1.2.0"
ggez="0.4"
itertools = "0.8.0"
rayon="1.0"

[dev-dependencies]
quickcheck = "0.8.2"
spectral = "0.6.0"
